使用工具生成相关文件

--- a/src/main/resources/templates/Home/login.html
+++ b/src/main/resources/templates/Home/login.html
@@ -43,7 +43,7 @@
     <div class="login-wrap">
         <div class="login">
             <div class="login-top">
-                <p class="logi-t-p">钢结构健康监测平台信息管理系统</p>
+                <p class="logi-t-p">XXX</p>
             </div>
             <div class="login-box">
                 <el-tabs v-model="activeName">
