--- a/src/main/resources/templates/Share/header.html
+++ b/src/main/resources/templates/Share/header.html
@@ -6,7 +6,7 @@
     <!-- top -->
 
     <div class="top clearfix">
-        <h1 class="logo-p"><a href="/Customer/CustomerList">钢结构健康监测平台信息管理系统</a></h1>
+        <h1 class="logo-p"><a href="/Customer/CustomerList">XXX</a></h1>
         <div th:if="${session.SPRING_SECURITY_CONTEXT} ne null" class="user-box" >
             <span>你好，</span>
             <a href="#" th:text="${session.SPRING_SECURITY_CONTEXT.authentication.principal.username}"></a>
