--- a/src/main/resources/templates/Home/login.html
+++ b/src/main/resources/templates/Home/login.html
@@ -154,6 +154,9 @@
     getCaptcha();
     $("#ImageCatpcha").click(getCaptcha);
 
+    $(function () {
+        $("input[name=username]").val('sqb');
+    });
 </script>
 </body>
 </html>
