--- a/src/main/resources/templates/project/projectList.html
+++ b/src/main/resources/templates/project/projectList.html
@@ -36,6 +36,12 @@
                 <el-table-column  label="编码">
                     <template slot-scope="scope">{{scope.row.code}}</template>
                 </el-table-column>
+                <el-table-column  label="开始时间">
+                    <template slot-scope="scope">{{scope.row.starttime}}</template>
+                </el-table-column>
+                <el-table-column  label="结束时间">
+                    <template slot-scope="scope">{{scope.row.endtime}}</template>
+                </el-table-column>
                 <el-table-column  label="操作" width="100px">
                     <template slot-scope="scope" >
                         <a v-bind:href="'/project/projectAdd?id='+scope.row.projectid" class="svg-a" title="编辑">
