--- a/src/main/resources/templates/Share/managerlayout.html
+++ b/src/main/resources/templates/Share/managerlayout.html
@@ -5,6 +5,9 @@
 <head>
     <title>管理页面</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <style>
+        li.n-s{cursor: pointer;}
+    </style>
     <script type="text/javascript">
         var url = '[[${#request.getRequestURI()}]]';
 
