--- a/src/main/resources/templates/task/taskList.html
+++ b/src/main/resources/templates/task/taskList.html
@@ -30,21 +30,21 @@
                         {{((pageModel.currentPage-1) * pageModel.pageSize) + scope.$index+1}}
                     </template>
                 </el-table-column>
+                <el-table-column  label="项目">
+                    <template slot-scope="scope">{{scope.row.model.projectcode}}</template>
+                </el-table-column>
                 <el-table-column  label="名称">
-                    <template slot-scope="scope" >{{scope.row.name}}</template>
+                    <template slot-scope="scope" >{{scope.row.model.title}}</template>
                 </el-table-column>
-                <el-table-column  label="编码">
-                    <template slot-scope="scope">{{scope.row.code}}</template>
+                <el-table-column  label="类型">
+                    <template slot-scope="scope">{{scope.row.tasktypeDesc}}</template>
                 </el-table-column>
-                <el-table-column  label="开始时间">
-                    <template slot-scope="scope">{{scope.row.starttime}}</template>
-                </el-table-column>
-                <el-table-column  label="结束时间">
-                    <template slot-scope="scope">{{scope.row.endtime}}</template>
+                <el-table-column  label="状态">
+                    <template slot-scope="scope">{{scope.row.taskstatusDesc}}</template>
                 </el-table-column>
                 <el-table-column  label="操作" width="100px">
                     <template slot-scope="scope" >
-                        <a v-bind:href="'/task/taskAdd?id='+scope.row.taskid" class="svg-a" title="编辑">
+                        <a v-bind:href="'/task/taskAdd?id='+scope.row.model.taskid" class="svg-a" title="编辑">
                             <svg class="icon" aria-hidden="true">
                                 <use xlink:href="#icon-edtor"></use>
                             </svg>
