--- a/src/main/resources/templates/project/projectList.html
+++ b/src/main/resources/templates/project/projectList.html
@@ -114,7 +114,7 @@
 
                 $.ajax({
                     type: "post",
-                    url: contextRoot + "Customer/removeCustomer",
+                    url: contextRoot + "project/removeProject",
                     data: { ids : app.selectedItems.join(",") },
                     async: true,
                     success: function (result) {
